user authentication complete

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,15 @@
-<h1>Hello World</h1>
+<form action="/auth/login" method="POST">
+    <div>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email">
+    </div>
+    <div>
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password">
+    </div>
+    <div>
+        <input type="submit" value="Login">
+    </div>
+
+    <p>New to Bridge? <a href="/register">Create an account here</a></p>
+</form>
