--- a/views/register.hbs
+++ b/views/register.hbs
@@ -15,5 +15,5 @@
         <input type="submit" value="Register">
     </div>
 
-    <p>Already have an account? <a href="/login">Login here</a></p>
+    <p>Already have an account? <a href="/">Login here</a></p>
 </form>
