--- a/views/account.hbs
+++ b/views/account.hbs
@@ -3,7 +3,7 @@
 <div>
     <h2>Following: {{{following.length}}}</h2>
     {{#each following}}
-        <h3>{{{this}}}</h3>
+        <h3>{{{username}}}</h3>
     {{else}}
         <h3>You are not currently following anybody</h3>
     {{/each}}
@@ -12,7 +12,7 @@
 <div>
     <h2>Followers: {{followers.length}}</h2>
     {{#each followers}}
-        <h3>{{{this}}}</h3>
+        <h3>{{{username}}}</h3>
     {{else}}
         <h3>Nobody is currently following you</h3>
     {{/each}}
