--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bridge.</title>
-    </head>
-    <body>
-       <div>
-           {{{body}}}
-       </div>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Bridge.</title>
+</head>
+
+<body class="login">
+
+    <div class="row">
+        <div class="row col l8 hide-on-med-and-down left-login">
+            <div class="col l10 offset-l1">
+                <h1 class="title">A community built by students,<br> for students</h1>
+            </div>
+        </div>
+
+        <div class="col l4 s12 right-login">
+            {{{body}}}
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</body>
+
 </html>
