--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,15 +1,25 @@
-<form action="/auth/login" method="POST">
-    <div>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email">
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password">
-    </div>
-    <div>
-        <input type="submit" value="Login">
-    </div>
+<div class="row">
+    <div class="center-align col xl8 l10 m6 s8 offset-xl2 offset-l1 offset-m3 offset-s2">
+        <div class="">
+            <h5 class="">Login</h5>
 
-    <p>New to Bridge? <a href="/register">Create an account here</a></p>
-</form>
+            <form action="/auth/login" method="POST">
+                <div class="input-field">
+                    <input type="email" id="email" name="email" required>
+                    <label for="email">Email</label>
+                </div>
+
+                <div class="input-field">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+
+                <div class="input-field">
+                    <input type="submit" value="Login" class="black-text cyan lighten-4 btn">
+                </div>
+
+            </form>
+            <p>New to Bridge? <a href="/register">Create an account here</a></p>
+        </div>
+    </div>
+</div>
