--- a/views/layouts/community.hbs
+++ b/views/layouts/community.hbs
@@ -15,8 +15,8 @@
 <body>
 
     {{> _navbar}}
-    {{> _add_community_btn}}
-    
+    {{> _add_post_btn}}
+
     <div class="container">
         {{{body}}}
     </div>
