--- a/views/partials/_navbar.hbs
+++ b/views/partials/_navbar.hbs
@@ -3,7 +3,7 @@
         <a href="/feed" class="brand-logo">Bridge.</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons fas fa-bars"></i></a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="#">Search</a></li>
+            <li><a href="/search/community">Search</a></li>
             <li><a href="/feed">Feed</a></li>
             <li><a href="/account/{{_id}}">Account</a></li>
             <li><a href="/auth/logout">Logout</a></li>
@@ -13,7 +13,7 @@
 
 <ul class="sidenav" id="mobile-demo">
     <li><a href="/account/{{_id}}">Account</a></li>
-    <li><a href="badges.">Search Communities</a></li>
+    <li><a href="/search/community">Search</a></li>
     <li><a href="/feed">Feed</a></li>
     <li><a href="/auth/logout">Logout</a></li>
 </ul>
