--- a/views/account.hbs
+++ b/views/account.hbs
@@ -1,19 +1,34 @@
-<h1>{{username}}</h1>
-
-<div>
-    <h2>Following: {{{following.length}}}</h2>
-    {{#each following}}
-        <h3>{{{username}}}</h3>
-    {{else}}
-        <h3>You are not currently following anybody</h3>
-    {{/each}}
+<div class="row" style="margin-top: 10px;">
+    <div class="center-align col s12 m12 l4">
+        <i class="fas fa-user-circle" style="font-size: 10rem; color: gray;"></i>
+        <h1 class="profile">{{username}}</h1>
+    </div>
+    <div class="center-align hide-on-med-and-down col s3">
+        <h3>Followers</h3>
+        <h4>{{followers.length}}</h4>
+    </div>
+    <div class="center-align hide-on-med-and-down col s3">
+        <h3>Following</h3>
+        <h4>{{following.length}}</h4>
+    </div>
 </div>
 
-<div>
-    <h2>Followers: {{followers.length}}</h2>
-    {{#each followers}}
-        <h3>{{{username}}}</h3>
-    {{else}}
-        <h3>Nobody is currently following you</h3>
-    {{/each}}
+<div class="row">
+    <h4>My Posts</h4>
+    <ul class="collection">
+        {{#each posts}}
+        <li class="collection-item avatar">
+            <i class="fas fa-user-friends circle"></i>
+            <span class="title community-title" style="font-size: 1.5rem !important;">{{{title}}}</span>
+            <span>{{{likes.length}}} likes {{{replies.length}}} replies</span>
+            <p class="truncate">{{{body}}}</p>
+            <div class="divider"></div>
+            <p>{{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}}</p>
+            <a href="/post/{{_id}}" class="secondary-content"><i class="fas fa-chevron-right chevron"
+                    style="font-size: 1.8rem !important; color: #80deea;"></i></a>
+        </li>
+        {{else}}
+        <h2 class="center-align">You do not have any posts</h2>
+        {{/each}}
+    </ul>
 </div>
