--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,13 +5,13 @@
 
             <form action="/auth/login" method="POST">
                 <div class="input-field">
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" required autocomplete="off">
                     <label for="email">Email</label>
                 </div>
 
                 <div class="input-field">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="password" required autocomplete="off">
                 </div>
 
                 <div class="input-field">
