--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,18 +5,18 @@
 
             <form action="/auth/register" method="POST">
                 <div class="input-field">
-                    <input type="text" id="username" name="username" required>
+                    <input type="text" id="username" name="username" required autocomplete="off">
                     <label for="username">Username</label>
                 </div>
 
                 <div class="input-field">
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" required autocomplete="off">
                     <label for="email">Email</label>
                 </div>
 
                 <div class="input-field">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="password" required autocomplete="off">
                 </div>
 
                 <div class="input-field">
